# PhysicsTest

./: CMakeLists.txt
include/: constants.h  physics_objects.h  physics_utils.h
src/: main.cpp  today.md
src/custom/: debugger.h
